project/CS131-Project-Sample-Grading-Script/nohup.out
  File "/home/wei/school/FA20/cs131/project/CS131-Project-Sample-Grading-Script/./sample_submission/server.py", line 13
    "Jaquez":    12351#8001,
    ^
SyntaxError: invalid syntax
  File "/home/wei/school/FA20/cs131/project/CS131-Project-Sample-Grading-Script/./sample_submission/server.py", line 13
    "Jaquez":    12351#8001,
    ^
SyntaxError: invalid syntax
  File "/home/wei/school/FA20/cs131/project/CS131-Project-Sample-Grading-Script/./sample_submission/server.py", line 13
    "Jaquez":    12351#8001,
    ^
SyntaxError: invalid syntax
  File "/home/wei/school/FA20/cs131/project/CS131-Project-Sample-Grading-Script/./sample_submission/server.py", line 13
    "Jaquez":    12351#8001,
    ^
SyntaxError: invalid syntax
  File "/home/wei/school/FA20/cs131/project/CS131-Project-Sample-Grading-Script/./sample_submission/server.py", line 13
    "Jaquez":    12351#8001,
    ^
SyntaxError: invalid syntax
